// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Array [
  Array [
    "Contentful: 4 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 0 cached entries",
  ],
  Array [
    "Contentful: 4 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 0 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Person nodes",
  ],
  Array [
    "Creating 3 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 4 Contentful asset nodes",
  ],
  Array [
    "Contentful: 1 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 22 cached entries",
  ],
  Array [
    "Contentful: 1 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 8 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 1 Contentful asset nodes",
  ],
]
`;

exports[`gatsby-node should create nodes from initial payload 3`] = `
Array [
  Array [
    "Contentful: 4 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 0 cached entries",
  ],
  Array [
    "Contentful: 4 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 0 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Person nodes",
  ],
  Array [
    "Creating 3 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 4 Contentful asset nodes",
  ],
]
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Array [
  Array [
    "Contentful: 4 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 0 cached entries",
  ],
  Array [
    "Contentful: 4 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 0 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Person nodes",
  ],
  Array [
    "Creating 3 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 4 Contentful asset nodes",
  ],
  Array [
    "Contentful: 1 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 22 cached entries",
  ],
  Array [
    "Contentful: 1 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 8 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 1 Contentful asset nodes",
  ],
  Array [
    "Contentful: 0 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 1 deleted entries",
  ],
  Array [
    "Contentful: 28 cached entries",
  ],
  Array [
    "Contentful: 0 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 10 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
]
`;

exports[`gatsby-node should remove an asset 1`] = `
Array [
  Array [
    "Contentful: 4 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 0 cached entries",
  ],
  Array [
    "Contentful: 4 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 0 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Person nodes",
  ],
  Array [
    "Creating 3 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 4 Contentful asset nodes",
  ],
  Array [
    "Contentful: 1 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 22 cached entries",
  ],
  Array [
    "Contentful: 1 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 8 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 1 Contentful asset nodes",
  ],
  Array [
    "Contentful: 0 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 28 cached entries",
  ],
  Array [
    "Contentful: 0 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 10 cached assets",
  ],
  Array [
    "Contentful: 1 deleted assets",
  ],
]
`;

exports[`gatsby-node should update a blogpost 1`] = `
Array [
  Array [
    "Contentful: 4 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 0 cached entries",
  ],
  Array [
    "Contentful: 4 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 0 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Person nodes",
  ],
  Array [
    "Creating 3 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 4 Contentful asset nodes",
  ],
  Array [
    "Contentful: 1 new entries",
  ],
  Array [
    "Contentful: 0 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 22 cached entries",
  ],
  Array [
    "Contentful: 1 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 8 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Blog Post nodes",
  ],
  Array [
    "Creating 1 Contentful asset nodes",
  ],
  Array [
    "Contentful: 0 new entries",
  ],
  Array [
    "Contentful: 1 updated entries",
  ],
  Array [
    "Contentful: 0 deleted entries",
  ],
  Array [
    "Contentful: 28 cached entries",
  ],
  Array [
    "Contentful: 0 new assets",
  ],
  Array [
    "Contentful: 0 updated assets",
  ],
  Array [
    "Contentful: 10 cached assets",
  ],
  Array [
    "Contentful: 0 deleted assets",
  ],
  Array [
    "Creating 1 Contentful Blog Post nodes",
  ],
]
`;

exports[`gatsby-node stores rich text as raw with references attached 1`] = `
Array [
  "ahntqop9oi7x___7oHxo6bs0us9wIkq27qdyK___Entry",
  "ahntqop9oi7x___6KpLS2NZyB3KAvDzWf4Ukh___Entry",
  "ahntqop9oi7x___4ZQrqcrTunWiuNaavhGYNT___Asset",
]
`;

exports[`gatsby-node stores rich text as raw with references attached 2`] = `
Array [
  "ahntqop9oi7x___7oHxo6bs0us9wIkq27qdyK___Entry___nl",
  "ahntqop9oi7x___6KpLS2NZyB3KAvDzWf4Ukh___Entry___nl",
  "ahntqop9oi7x___4ZQrqcrTunWiuNaavhGYNT___Asset___nl",
]
`;
